css fix to align content on top

--- a/src/Views/Home/home.module.scss
+++ b/src/Views/Home/home.module.scss
@@ -4,7 +4,7 @@
 .home_wrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding-top: 5vh;
   min-height: 100vh;
   flex-wrap: wrap;
 
